Fix layout on mobile devices, fix some mixed http/https content

--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -26,7 +26,6 @@ body {
 	padding: 0;
 	margin: 0;
 	font-family: "Source Serif Pro", serif;
-	font-size: 21px;
 }
 
 .post-date {
@@ -37,19 +36,38 @@ span.active-nav-item > a[href] {
 	color: var(--secondary);
 }
 
-nav {
-	display: inline;
-	margin-left: 40px;
-}
-
 nav > span {
-	margin-right: 16px;
+	margin-right: 0.25em;
 }
 
 header, h1, h2, h3, h4, h5, h6 {
 	font-family: "Lato", sans-serif;
 	font-weight: 400;
 	font-style: italic;
+}
+
+@media (min-width: 720px) {
+	html,
+	body {
+		font-size: 21px;
+	}
+
+	nav {
+		display: inline;
+		margin-left: 40px;
+	}
+
+	nav > span {
+		margin-right: 16px;
+	}
+
+	header {
+		margin-left: 50px;
+	}
+
+	main {
+		margin-left: 50px;
+	}
 }
 
 h1 {
@@ -64,16 +82,12 @@ h3 {
 	font-size: 1.5em;
 }
 
-header {
-	font-size: 24px;
+header * {
+	font-size: 1.5rem;
 }
 
 body {
 	background-color: var(--background);
-}
-
-header {
-	margin-left: 50px;
 }
 
 .portrait-container {
@@ -91,8 +105,11 @@ header > em {
 }
 
 main {
-	margin-left: 50px;
 	max-width: 40em;
+}
+
+img {
+	max-width: 100%;
 }
 
 p,
